--- a/templates/gethelp.html
+++ b/templates/gethelp.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
 <html>
 
+<title>How To Get Help</title>
+
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <title>EduMental</title>
-    <link rel="stylesheet" href="/static/css/style.css" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css family=Alata">
 </head>
-
+<link rel="stylesheet" href="/static/css/style.css" />
+ <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+</html>
+<body style="background-color: #2AA8A8"></body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
         <a class="navbar-brand"
@@ -24,7 +23,7 @@
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page"
-                        href="https://5000-4770e44f-1df9-41fc-a010-c0c248f1e670.cs-us-east1-pkhd.cloudshell.dev/sign-up" >Sign
+                        href="https://5000-4770e44f-1df9-41fc-a010-c0c248f1e670.cs-us-east1-pkhd.cloudshell.dev/sign-up">Sign
                         Up</a>
                 </li>
                 <li class="nav-item">
@@ -33,7 +32,7 @@
                         In</a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="" id="navbarDropdown" role="button"
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                         data-bs-toggle="dropdown" aria-expanded="false">
                         How To Get help
                     </a>
@@ -53,38 +52,8 @@
         </div>
     </div>
 </nav>
-
-<body style="background-color: #2AA8A8">
-
-    <body>
-        <div id="MainText">
-            <h1>EduMental</h1>
-            <p id="SubText">This website is for spreading awareness on Mental Heath and helping students who have issues
-                to get help.</p>
-
-            <img src="https://970-4770e44f-1df9-41fc-a010-c0c248f1e670.cs-us-east1-pkhd.cloudshell.dev/mini-browser/home/mattvarela06/Day%20Eight/Mental%20Health%20Website/static/images/Logo.png"
-                alt="Logo" height="100" width="100" id="Logo" />
-
-        </div>
-        <div id=Slogan>
-            <link href="https://fonts.googleapis.com/css2?family=Cabin&display=swap" rel="stylesheet">
-            <p>"For Students By Students"</p>
-        </div>
-        <div id="BasicInfo">
-            <link href="https://fonts.googleapis.com/css2?family=Cabin&display=swap" rel="stylesheet">
-            <p>Mental health is a challenge for many people especially teenagers in middle and high school. With the
-                Covid pandemic
-                this issue has been exacerbated and yet there are very few website specifically oriented towards
-                students. This is why
-                we have made a website for students to share their experiences and use resources to help better their
-                mental health.</p>
-        </div>
-
-        <img src="https://media.istockphoto.com/photos/hand-shows-the-brain-picture-id1031563502?k=6&m=1031563502&s=612x612&w=0&h=eUM5Fn1c3q9hx_Z_kgzqqctLsAydWf1Oaa0n63wd7Gw="
-            alt="mental health photos" id="Picture" />
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+<h1>Get Help here!</h1>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
             crossorigin="anonymous"></script>
-    </body>
 
-</html>
