--- a/templates/signed-in.html
+++ b/templates/signed-in.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>EduMental</title>
+    <title>Mental Health</title>
     <link rel="stylesheet" href="/static/css/style.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -24,13 +24,13 @@
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page"
-                        href="https://5000-4770e44f-1df9-41fc-a010-c0c248f1e670.cs-us-east1-pkhd.cloudshell.dev/sign-up" >Sign
+                        href="https://5000-4770e44f-1df9-41fc-a010-c0c248f1e670.cs-us-east1-pkhd.cloudshell.dev/sign-up">Sign
                         Up</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link"
-                        href="https://5000-4770e44f-1df9-41fc-a010-c0c248f1e670.cs-us-east1-pkhd.cloudshell.dev/log-in">Log
-                        In</a>
+                        href="https://5000-4770e44f-1df9-41fc-a010-c0c248f1e670.cs-us-east1-pkhd.cloudshell.dev">Log
+                        Out</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="" id="navbarDropdown" role="button"
@@ -41,8 +41,8 @@
                         <li><a class="dropdown-item"
                                 href="https://5000-4770e44f-1df9-41fc-a010-c0c248f1e670.cs-us-east1-pkhd.cloudshell.dev/gethelp">Get
                                 Help</a></li>
-                        <li><a class="dropdown-item" href="https://5000-4770e44f-1df9-41fc-a010-c0c248f1e670.cs-us-east1-pkhd.cloudshell.dev/talk">Talk With A Professional</a></li>
-                        <li><a class="dropdown-item" href="https://5000-4770e44f-1df9-41fc-a010-c0c248f1e670.cs-us-east1-pkhd.cloudshell.dev/chatroom">Chat Room</a></li>
+                        <li><a class="dropdown-item" href="#">Talk With A Professional</a></li>
+                        <li><a class="dropdown-item" href="#">Chat Room</a></li>
                     </ul>
                 </li>
             </ul>
@@ -58,7 +58,7 @@
 
     <body>
         <div id="MainText">
-            <h1>EduMental</h1>
+            <h1>Mental Health</h1>
             <p id="SubText">This website is for spreading awareness on Mental Heath and helping students who have issues
                 to get help.</p>
 
@@ -82,7 +82,7 @@
 
         <img src="https://media.istockphoto.com/photos/hand-shows-the-brain-picture-id1031563502?k=6&m=1031563502&s=612x612&w=0&h=eUM5Fn1c3q9hx_Z_kgzqqctLsAydWf1Oaa0n63wd7Gw="
             alt="mental health photos" id="Picture" />
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
             crossorigin="anonymous"></script>
     </body>
