--- a/templates/forgot-password.html
+++ b/templates/forgot-password.html
@@ -39,7 +39,7 @@
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <li><a class="dropdown-item"
-                                href="https://5000-4770e44f-1df9-41fc-a010-c0c248f1e670.cs-us-east1-pkhd.cloudshell.dev/gethelp">Get
+                                href="/gethelp">Get
                                 Help</a></li>
                         <li><a class="dropdown-item" href="#">Talk With A Professional</a></li>
                         <li><a class="dropdown-item" href="#">Chat Room</a></li>
@@ -49,7 +49,6 @@
             <form class="d-flex">
                 <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
         </div>
     </div>
 </nav>
