--- a/templates/index.html
+++ b/templates/index.html
@@ -39,7 +39,7 @@
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <li><a class="dropdown-item"
-                                href="https://5000-4770e44f-1df9-41fc-a010-c0c248f1e670.cs-us-east1-pkhd.cloudshell.dev/gethelp">Get
+                                href="/gethelp">Get
                                 Help</a></li>
                         <li><a class="dropdown-item" href="https://5000-4770e44f-1df9-41fc-a010-c0c248f1e670.cs-us-east1-pkhd.cloudshell.dev/talk">Talk With A Professional</a></li>
                         <li><a class="dropdown-item" href="https://5000-4770e44f-1df9-41fc-a010-c0c248f1e670.cs-us-east1-pkhd.cloudshell.dev/chatroom">Chat Room</a></li>
