--- a/templates/chatroom.html
+++ b/templates/chatroom.html
@@ -61,60 +61,54 @@
 
 <div class="card-group">
   <div class="card">
-    <img src="..." class="card-img-top" alt="...">
+    <img src="https://uniquemindcare.com/wp-content/uploads/2020/01/cbd-and-anxiety.png" class="card-img-top" alt="AnxPhoto">
     <div class="card-body">
       <h5 class="card-title">Anxiety</h5>
-      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-       <a href="#" class="btn btn-primary">Go somewhere</a>
+      <p class="card-text">Chat With Other People Who Also Have Anxiety</p>
+       <a href="https://5000-4770e44f-1df9-41fc-a010-c0c248f1e670.cs-us-east1-pkhd.cloudshell.dev/chatroom-Anxiety" class="btn btn-primary">Chat</a>
     </div>
   </div>
   <div class="card">
-    <img src="..." class="card-img-top" alt="...">
+    <img src="https://images.emedicinehealth.com/images/article/main_image/bipolar-disorder-1.jpg" class="card-img-top" alt="BiPhoto" hieght= "30" width = "50">
     <div class="card-body">
       <h5 class="card-title">Bipolar Disorder</h5>
-      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-       <a href="#" class="btn btn-primary">Go somewhere</a>
+      <p class="card-text">Chat With Other People Who Also Have Bipolar Disorder</p>
+       <a href="https://5000-4770e44f-1df9-41fc-a010-c0c248f1e670.cs-us-east1-pkhd.cloudshell.dev/chatroom-Bipolar" class="btn btn-primary">Chat</a>
     </div>
   </div>
   <div class="card">
-    <img src="..." class="card-img-top" alt="...">
+    <img src="https://www.talkspace.com/blog/wp-content/uploads/2017/09/stigma-depression-woman-illustration_1320WJR-1.png" class="card-img-top" alt="DepPhoto">
     <div class="card-body">
       <h5 class="card-title">Depression</h5>
-      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-       <a href="#" class="btn btn-primary">Go somewhere</a>
+      <p class="card-text">Chat With Other People Who Also Have Depression</p>
+       <a href="https://5000-4770e44f-1df9-41fc-a010-c0c248f1e670.cs-us-east1-pkhd.cloudshell.dev/chatroom-Depression" class="btn btn-primary">Chat</a>
     </div>
   </div>
 </div>
 
 <div class="card-group">
   <div class="card">
-    <img src="..." class="card-img-top" alt="...">
+    <img src="https://i0.wp.com/images-prod.healthline.com/hlcmsresource/images/hl-newsletter-new/img/adhd.png?w=1155" class="card-img-top" alt="ADPhoto">
     <div class="card-body">
       <h5 class="card-title">ADHD</h5>
-      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-       <a href="#" class="btn btn-primary">Go somewhere</a>
+      <p class="card-text">Chat With People Who Also Have ADHD</p>
+       <a href="https://5000-4770e44f-1df9-41fc-a010-c0c248f1e670.cs-us-east1-pkhd.cloudshell.dev/chatroom-ADHD" class="btn btn-primary">Chat</a>
     </div>
   </div>
   <div class="card">
-    <img src="..." class="card-img-top" alt="...">
+    <img src="https://www.cedars-sinai.org/content/dam/cedars-sinai/blog/2019/07/common-physical-symptoms-of-hidden-stress.jpg" class="card-img-top" alt="StrPhoto">
     <div class="card-body">
       <h5 class="card-title">Stress</h5>
-      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-       <a href="#" class="btn btn-primary">Go somewhere</a>
+      <p class="card-text">Chat With People Who Also Have Stress</p>
+       <a href="https://5000-4770e44f-1df9-41fc-a010-c0c248f1e670.cs-us-east1-pkhd.cloudshell.dev/chatroom-Stress" class="btn btn-primary">Chat</a>
     </div>
   </div>
   <div class="card">
-    <img src="..." class="card-img-top" alt="...">
+    <img src="https://www.helpguide.org/wp-content/uploads/illustration-man-hearing-many-voices-768.jpg" class="card-img-top" alt="SchPhoto">
     <div class="card-body">
       <h5 class="card-title">Schizophrenia</h5>
-      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-       <a href="#" class="btn btn-primary">Go somewhere</a>
+      <p class="card-text">Chat With People Who Also Have Schizophrenia</p>
+       <a href="https://5000-4770e44f-1df9-41fc-a010-c0c248f1e670.cs-us-east1-pkhd.cloudshell.dev/chatroom-Schizophrenia" class="btn btn-primary">Chat</a>
     </div>
   </div>
 </div>
@@ -122,10 +116,6 @@
 
 
 
-<!-- <div id="chat">
-    <img src="https://970-4770e44f-1df9-41fc-a010-c0c248f1e670.cs-us-east1-pkhd.cloudshell.dev/mini-browser/home/mattvarela06/Day%20Eight/Mental%20Health%20Website/static/images/chat.png"
-        alt="Chat" width="1000" height="600" />
-</div> -->
 
 
 
