--- a/templates/chat-sch.html
+++ b/templates/chat-sch.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
 
-<title>Forgot Password</title>
+<title>Schizophrenia</title>
 
 <head>
 
 </head>
+<link rel="stylesheet" href="/static/css/style.css" />
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
@@ -52,12 +53,11 @@
         </div>
     </div>
 </nav>
-<h1>Forgot Password</h1>
-<form>
-    <label for="email"><b>Email</b></label>
-    <input type="text" placeholder="Enter Email" name="email" required>
-    <button type="submit" class="signupbtn">Submit</button>
-</form>
+<h1>Schizophrenia Chat</h1>
+<div id="chat">
+    <img src="https://970-4770e44f-1df9-41fc-a010-c0c248f1e670.cs-us-east1-pkhd.cloudshell.dev/mini-browser/home/mattvarela06/Day%20Eight/Mental%20Health%20Website/static/images/chat.png"
+        alt="Chat" width="1000" height="600" />
+</div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
