--- a/templates/sign-up.html
+++ b/templates/sign-up.html
@@ -39,8 +39,8 @@
                         <li><a class="dropdown-item"
                                 href="https://5000-4770e44f-1df9-41fc-a010-c0c248f1e670.cs-us-east1-pkhd.cloudshell.dev/gethelp">Get
                                 Help</a></li>
-                        <li><a class="dropdown-item" href="#">Talk With A Professional</a></li>
-                        <li><a class="dropdown-item" href="#">Chat Room</a></li>
+                        <li><a class="dropdown-item" href="https://5000-4770e44f-1df9-41fc-a010-c0c248f1e670.cs-us-east1-pkhd.cloudshell.dev/talk">Talk With A Professional</a></li>
+                        <li><a class="dropdown-item" href="https://5000-4770e44f-1df9-41fc-a010-c0c248f1e670.cs-us-east1-pkhd.cloudshell.dev/chatroom">Chat Room</a></li>
                     </ul>
                 </li>
             </ul>
