--- a/templates/chatroom.html
+++ b/templates/chatroom.html
@@ -11,7 +11,7 @@
 
 </html>
 
-<body style="background-color: #2AA8A8"></body>
+<body style="background-color: #52B788">
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
         <a class="navbar-brand"
@@ -57,11 +57,11 @@
         </div>
     </div>
 </nav>
-<h1>Chat With Other People Here!</h1>
+<h1 id="ChatroomTitle">Chat With Other People Here!</h1>
 
-<div class="card-group">
+<div class="card-group" id="Cards">
   <div class="card">
-    <img src="https://uniquemindcare.com/wp-content/uploads/2020/01/cbd-and-anxiety.png" class="card-img-top" alt="AnxPhoto">
+    <img src="https://uniquemindcare.com/wp-content/uploads/2020/01/cbd-and-anxiety.png" class="card-img-top" alt="AnxPhoto" id="Anxiety">
     <div class="card-body">
       <h5 class="card-title">Anxiety</h5>
       <p class="card-text">Chat With Other People Who Also Have Anxiety</p>
@@ -77,7 +77,7 @@
     </div>
   </div>
   <div class="card">
-    <img src="https://www.talkspace.com/blog/wp-content/uploads/2017/09/stigma-depression-woman-illustration_1320WJR-1.png" class="card-img-top" alt="DepPhoto">
+    <img src="https://www.talkspace.com/blog/wp-content/uploads/2017/09/stigma-depression-woman-illustration_1320WJR-1.png" class="card-img-top" alt="DepPhoto" id="Depression">
     <div class="card-body">
       <h5 class="card-title">Depression</h5>
       <p class="card-text">Chat With Other People Who Also Have Depression</p>
@@ -86,9 +86,9 @@
   </div>
 </div>
 
-<div class="card-group">
+<div class="card-group" id="Cards">
   <div class="card">
-    <img src="https://i0.wp.com/images-prod.healthline.com/hlcmsresource/images/hl-newsletter-new/img/adhd.png?w=1155" class="card-img-top" alt="ADPhoto">
+    <img src="https://i0.wp.com/images-prod.healthline.com/hlcmsresource/images/hl-newsletter-new/img/adhd.png?w=1155" class="card-img-top" alt="ADPhoto" id="ADHD">
     <div class="card-body">
       <h5 class="card-title">ADHD</h5>
       <p class="card-text">Chat With People Who Also Have ADHD</p>
@@ -96,7 +96,7 @@
     </div>
   </div>
   <div class="card">
-    <img src="https://www.cedars-sinai.org/content/dam/cedars-sinai/blog/2019/07/common-physical-symptoms-of-hidden-stress.jpg" class="card-img-top" alt="StrPhoto">
+    <img src="https://www.cedars-sinai.org/content/dam/cedars-sinai/blog/2019/07/common-physical-symptoms-of-hidden-stress.jpg" class="card-img-top" alt="StrPhoto" id="Stress">
     <div class="card-body">
       <h5 class="card-title">Stress</h5>
       <p class="card-text">Chat With People Who Also Have Stress</p>
@@ -104,7 +104,7 @@
     </div>
   </div>
   <div class="card">
-    <img src="https://www.helpguide.org/wp-content/uploads/illustration-man-hearing-many-voices-768.jpg" class="card-img-top" alt="SchPhoto">
+    <img src="https://www.helpguide.org/wp-content/uploads/illustration-man-hearing-many-voices-768.jpg" class="card-img-top" alt="SchPhoto" id="Schizophrenia">
     <div class="card-body">
       <h5 class="card-title">Schizophrenia</h5>
       <p class="card-text">Chat With People Who Also Have Schizophrenia</p>
