--- a/static/css/style.css
+++ b/static/css/style.css
@@ -198,6 +198,10 @@ div {
     max-width:100%;
     height: 305px;
   }
+    #Bipolar{
+    max-width:100%;
+    height: 305px;
+  }
   #Depression{
     max-width:100%;
     height: 305px;
