--- a/templates/chat-anx.html
+++ b/templates/chat-anx.html
@@ -53,7 +53,7 @@
         </div>
     </div>
 </nav>
-<h1>Anxiety Chat hi</h1>
+<h1>Anxiety Chat</h1>
 <div id="chat">
     <img src="https://970-4770e44f-1df9-41fc-a010-c0c248f1e670.cs-us-east1-pkhd.cloudshell.dev/mini-browser/home/mattvarela06/Day%20Eight/Mental%20Health%20Website/static/images/chat.png"
         alt="Chat" width="1000" height="600" />
