--- a/templates/chatroom.html
+++ b/templates/chatroom.html
@@ -69,7 +69,7 @@
     </div>
   </div>
   <div class="card">
-    <img src="https://images.emedicinehealth.com/images/article/main_image/bipolar-disorder-1.jpg" class="card-img-top" alt="BiPhoto" hieght= "30" width = "50">
+    <img src="https://images.emedicinehealth.com/images/article/main_image/bipolar-disorder-1.jpg" class="card-img-top" alt="BiPhoto" id="Bipolar">
     <div class="card-body">
       <h5 class="card-title">Bipolar Disorder</h5>
       <p class="card-text">Chat With Other People Who Also Have Bipolar Disorder</p>
