--- a/static/css/style.css
+++ b/static/css/style.css
@@ -198,7 +198,7 @@ div {
     max-width:100%;
     height: 305px;
   }
-    #Bipolar{
+  #Bipolar{
     max-width:100%;
     height: 305px;
   }
@@ -233,4 +233,74 @@ div {
   }
   .btn-primary{
     background-color: #52B788 !important;
+  }
+  #LoginTitle{
+    min-height:100px;
+    width:100%;
+    background-color: #52B788;
+    text-align: center;
+    color: white 
+  }
+  #SignupTitle{
+    min-height:100px;
+    width:100%;
+    background-color: #52B788;
+    text-align: center;
+    color: white 
+  }
+  #AnxietyTitle{
+    min-height:100px;
+    width:100%;
+    background-color: #52B788;
+    text-align: center;
+    color: white 
+  }
+  #BipolarTitle{
+    min-height:100px;
+    width:100%;
+    background-color: #52B788;
+    text-align: center;
+    color: white 
+  }
+  #DepressionTitle{
+    min-height:100px;
+    width:100%;
+    background-color: #52B788;
+    text-align: center;
+    color: white 
+  }
+  #ADHDTitle{
+    min-height:100px;
+    width:100%;
+    background-color: #52B788;
+    text-align: center;
+    color: white 
+  }
+  #StressTitle{
+    min-height:100px;
+    width:100%;
+    background-color: #52B788;
+    text-align: center;
+    color: white 
+  }
+  #SchizophreniaTitle{
+    min-height:100px;
+    width:100%;
+    background-color: #52B788;
+    text-align: center;
+    color: white 
+  }
+  #GetHelpTitle{
+    min-height:100px;
+    width:100%;
+    background-color: #52B788;
+    text-align: center;
+    color: white 
+  }
+  #TalkTitle{
+    min-height:100px;
+    width:100%;
+    background-color: #52B788;
+    text-align: center;
+    color: white 
   }
