--- a/templates/gethelp.html
+++ b/templates/gethelp.html
@@ -52,7 +52,7 @@
         </div>
     </div>
 </nav>
-<h1>Get Help here!</h1>
+<h1 id="GetHelpTitle">Get Help here!</h1>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
             crossorigin="anonymous"></script>
