--- a/templates/log-in.html
+++ b/templates/log-in.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <link rel="stylesheet" href="/static/css/style.css"/>
+</head>
 <title>Log In</title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -201,7 +204,7 @@
 
 <body>
 
-    <h1>Log In Here</h1>
+    <h1 id="LoginTitle">Log In Here</h1>
 
     <button onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Login</button>
 
