--- a/templates/index.html
+++ b/templates/index.html
@@ -85,6 +85,16 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
             crossorigin="anonymous"></script>
+        <div class="card-group" id="Cards">
+            <div class="card" id=InfoPage>
+                <div class="card-body">
+                    <h5 class="card-title">Information Page</h5>
+                    <p class="card-text">Click here to learn more about us.</p>
+                    <a href="https://5000-4770e44f-1df9-41fc-a010-c0c248f1e670.cs-us-east1-pkhd.cloudshell.dev/chatroom-Schizophrenia"
+                        class="btn btn-primary">Info</a>
+                </div>
+            </div>
+        </div>
     </body>
 
 </html>
