--- a/templates/signed-in.html
+++ b/templates/signed-in.html
@@ -41,8 +41,12 @@
                         <li><a class="dropdown-item"
                                 href="https://5000-4770e44f-1df9-41fc-a010-c0c248f1e670.cs-us-east1-pkhd.cloudshell.dev/gethelp-signedin">Get
                                 Help</a></li>
-                        <li><a class="dropdown-item" href="https://5000-4770e44f-1df9-41fc-a010-c0c248f1e670.cs-us-east1-pkhd.cloudshell.dev/talk-signedin">Talk With A Professional</a></li>
-                        <li><a class="dropdown-item" href="https://5000-4770e44f-1df9-41fc-a010-c0c248f1e670.cs-us-east1-pkhd.cloudshell.dev/chatroom-signedin">Chat Room</a></li>
+                        <li><a class="dropdown-item"
+                                href="https://5000-4770e44f-1df9-41fc-a010-c0c248f1e670.cs-us-east1-pkhd.cloudshell.dev/talk-signedin">Talk
+                                With A Professional</a></li>
+                        <li><a class="dropdown-item"
+                                href="https://5000-4770e44f-1df9-41fc-a010-c0c248f1e670.cs-us-east1-pkhd.cloudshell.dev/chatroom-signedin">Chat
+                                Room</a></li>
                     </ul>
                 </li>
             </ul>
@@ -79,12 +83,22 @@
                 we have made a website for students to share their experiences and use resources to help better their
                 mental health.</p>
         </div>
-
+        </div>
         <img src="https://media.istockphoto.com/photos/hand-shows-the-brain-picture-id1031563502?k=6&m=1031563502&s=612x612&w=0&h=eUM5Fn1c3q9hx_Z_kgzqqctLsAydWf1Oaa0n63wd7Gw="
             alt="mental health photos" id="Picture" />
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
             crossorigin="anonymous"></script>
+        <div class="card-group" id="Cards">
+            <div class="card" id=InfoPage>
+                <div class="card-body">
+                    <h5 class="card-title">Information Page</h5>
+                    <p class="card-text">Click here to learn more about us.</p>
+                    <a href="https://5000-4770e44f-1df9-41fc-a010-c0c248f1e670.cs-us-east1-pkhd.cloudshell.dev/info"
+                        class="btn btn-primary">Info</a>
+                </div>
+            </div>
+        </div>
     </body>
 
 </html>
