--- a/templates/chat-str-signedin.html
+++ b/templates/chat-str-signedin.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html>
 
+<title>Stress</title>
+
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <title>Mental Health</title>
-    <link rel="stylesheet" href="/static/css/style.css" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css family=Alata">
 </head>
+<link rel="stylesheet" href="/static/css/style.css" />
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
+</html>
+
+<body style="background-color: #2AA8A8"></body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
         <a class="navbar-brand"
@@ -49,42 +50,14 @@
             <form class="d-flex">
                 <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
         </div>
     </div>
 </nav>
-
-<body style="background-color: #2AA8A8">
-
-    <body>
-        <div id="MainText">
-            <h1>Mental Health</h1>
-            <p id="SubText">This website is for spreading awareness on Mental Heath and helping students who have issues
-                to get help.</p>
-
-            <img src="https://970-4770e44f-1df9-41fc-a010-c0c248f1e670.cs-us-east1-pkhd.cloudshell.dev/mini-browser/home/mattvarela06/Day%20Eight/Mental%20Health%20Website/static/images/Logo.png"
-                alt="Logo" height="100" width="100" id="Logo" />
-
-        </div>
-        <div id=Slogan>
-            <link href="https://fonts.googleapis.com/css2?family=Cabin&display=swap" rel="stylesheet">
-            <p>"For Students By Students"</p>
-        </div>
-        <div id="BasicInfo">
-            <link href="https://fonts.googleapis.com/css2?family=Cabin&display=swap" rel="stylesheet">
-            <p>Mental health is a challenge for many people especially teenagers in middle and high school. With the
-                Covid pandemic
-                this issue has been exacerbated and yet there are very few website specifically oriented towards
-                students. This is why
-                we have made a website for students to share their experiences and use resources to help better their
-                mental health.</p>
-        </div>
-
-        <img src="https://media.istockphoto.com/photos/hand-shows-the-brain-picture-id1031563502?k=6&m=1031563502&s=612x612&w=0&h=eUM5Fn1c3q9hx_Z_kgzqqctLsAydWf1Oaa0n63wd7Gw="
-            alt="mental health photos" id="Picture" />
+<h1 id="StressTitle">Stress Chat</h1>
+<div id="chat">
+    <img src="https://970-4770e44f-1df9-41fc-a010-c0c248f1e670.cs-us-east1-pkhd.cloudshell.dev/mini-browser/home/mattvarela06/Day%20Eight/Mental%20Health%20Website/static/images/chat.png"
+        alt="Chat" width="1000" height="600" />
+</div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-            crossorigin="anonymous"></script>
-    </body>
-
-</html>
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
