--- a/templates/index.html
+++ b/templates/index.html
@@ -90,7 +90,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Information Page</h5>
                     <p class="card-text">Click here to learn more about us.</p>
-                    <a href="https://5000-4770e44f-1df9-41fc-a010-c0c248f1e670.cs-us-east1-pkhd.cloudshell.dev/chatroom-Schizophrenia"
+                    <a href="https://5000-4770e44f-1df9-41fc-a010-c0c248f1e670.cs-us-east1-pkhd.cloudshell.dev/info"
                         class="btn btn-primary">Info</a>
                 </div>
             </div>
