--- a/templates/info.html
+++ b/templates/info.html
@@ -1,1 +1,92 @@
-<h1>Placeholder</h1>
+<!DOCTYPE html>
+<html>
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>Mental Health</title>
+    <link rel="stylesheet" href="/static/css/style.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css family=Alata">
+</head>
+
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+        <a class="navbar-brand"
+            href="https://5000-4770e44f-1df9-41fc-a010-c0c248f1e670.cs-us-east1-pkhd.cloudshell.dev/signedin">Home</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page"
+                        href="https://5000-4770e44f-1df9-41fc-a010-c0c248f1e670.cs-us-east1-pkhd.cloudshell.dev/sign-up">Sign
+                        Up</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link"
+                        href="https://5000-4770e44f-1df9-41fc-a010-c0c248f1e670.cs-us-east1-pkhd.cloudshell.dev">Log
+                        Out</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="" id="navbarDropdown" role="button"
+                        data-bs-toggle="dropdown" aria-expanded="false">
+                        How To Get help
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <li><a class="dropdown-item"
+                                href="https://5000-4770e44f-1df9-41fc-a010-c0c248f1e670.cs-us-east1-pkhd.cloudshell.dev/gethelp-signedin">Get
+                                Help</a></li>
+                        <li><a class="dropdown-item"
+                                href="https://5000-4770e44f-1df9-41fc-a010-c0c248f1e670.cs-us-east1-pkhd.cloudshell.dev/talk-signedin">Talk
+                                With A Professional</a></li>
+                        <li><a class="dropdown-item"
+                                href="https://5000-4770e44f-1df9-41fc-a010-c0c248f1e670.cs-us-east1-pkhd.cloudshell.dev/chatroom-signedin">Chat
+                                Room</a></li>
+                    </ul>
+                </li>
+            </ul>
+            <form class="d-flex">
+                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success" type="submit">Search</button>
+            </form>
+        </div>
+    </div>
+</nav>
+
+<body style="background-color: #2AA8A8">
+
+    <body>
+        <div id="MainText">
+            <h1>Information Page</h1>
+            <p id="SubText">This website is for spreading awareness on Mental Heath and helping students who have issues
+                to get help.</p>
+            <img src="https://970-4770e44f-1df9-41fc-a010-c0c248f1e670.cs-us-east1-pkhd.cloudshell.dev/mini-browser/home/mattvarela06/Day%20Eight/Mental%20Health%20Website/static/images/Logo.png"
+                alt="Logo" height="100" width="100" id="Logo" />
+        </div>
+        <div id="BasicInfo">
+            <link href="https://fonts.googleapis.com/css2?family=Cabin&display=swap" rel="stylesheet">
+            <h2>The Problem</h2>
+            <p id="Text">
+                Many people today tend to ignore the present mental health issues among 
+                students in New York City. In 2019, when the COVID-19 pandemic started, 
+                depression among teens from the ages of 15-19 spiked by an overwhelming 
+                35.9%. Over the past year with online school and Zoom classes, one can 
+                only imagine how much this percentage has increased. Depression in teens 
+                has also been proven to be a crucial factor in a student's academic 
+                performance and concentration. Additionally, in New York there are six 
+                deaths per every 100,000 people in the same age group of 15-19 caused by 
+                self harm. Even though this is not as many teens 
+                dying as there are in the US as a whole, every life matters. A few causes 
+                of the recent increase in these numbers are lack of knowledge on teen mental 
+                health and difficulty to access professional help. Around 45% of all people 
+                in the US consider themselves to know about mental health, this means there 
+                are plenty of others who still have more to learn. There are available 
+                resources to inform oneself on mental health issues as well as resources in 
+                school for students. However, these resources may not be able to help as 
+                much as a professional would be able to.
+            </p>
