--- a/templates/info.html
+++ b/templates/info.html
@@ -58,7 +58,7 @@
     </div>
 </nav>
 
-<body style="background-color: #2AA8A8">
+<body style="background-color: white">
 
     <body>
         <div id="MainText">
