--- a/templates/log-in.html
+++ b/templates/log-in.html
@@ -66,14 +66,14 @@
                 padding: 12px 20px;
                 margin: 8px 0;
                 display: inline-block;
-                border: 1px solid #ccc;
+                border: 1px solid white;
                 box-sizing: border-box;
             }
 
             /* Set a style for all buttons */
             button {
-                background-color: #04AA6D;
-                color: white;
+                background-color: white;
+                color: #52B788;
                 padding: 14px 20px;
                 margin: 8px 0;
                 border: none;
@@ -89,7 +89,7 @@
             .cancelbtn {
                 width: auto;
                 padding: 10px 18px;
-                background-color: #f44336;
+                background-color: white;
             }
 
             /* Center the image and position the close button */
@@ -138,10 +138,10 @@
 
             /* Modal Content/Box */
             .modal-content {
-                background-color: #fefefe;
+                background-color: white;
                 margin: 5% auto 15% auto;
                 /* 5% from the top, 15% from the bottom and centered */
-                border: 1px solid #888;
+                border: 1px solid white;
                 width: 80%;
                 /* Could be more or less, depending on screen size */
             }
@@ -257,4 +257,4 @@
 
 </html>
 
-<body style="background-color: #2AA8A8"></body>
+<body style="background-color: #52B788"></body>
