--- a/templates/chat-dep.html
+++ b/templates/chat-dep.html
@@ -12,7 +12,7 @@
 
 </html>
 
-<body style="background-color: #2AA8A8"></body>
+<body style="background-color: #52B788"></body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
         <a class="navbar-brand"
