--- a/templates/forgot-password.html
+++ b/templates/forgot-password.html
@@ -4,14 +4,14 @@
 <title>Forgot Password</title>
 
 <head>
-
+    <link rel="stylesheet" href="/static/css/style.css"/>
 </head>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
 </html>
 
-<body style="background-color: #2AA8A8"></body>
+<body style="background-color: #52B788"></body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
         <a class="navbar-brand"
@@ -52,9 +52,9 @@
         </div>
     </div>
 </nav>
-<h1>Forgot Password</h1>
+<h1 id="ForgotPasswordTitle">Forgot Password</h1>
 <form>
-    <label for="email"><b>Email</b></label>
+    <label for="email" id="TextWhite"><b>We will send you a confirmation E-mail with your password:</b></label>
     <input type="text" placeholder="Enter Email" name="email" required>
     <button type="submit" class="signupbtn">Submit</button>
 </form>
