--- a/templates/index.html
+++ b/templates/index.html
@@ -54,7 +54,7 @@
     </div>
 </nav>
 
-<body style="background-color: #2AA8A8">
+<body style="background-color: white">
 
     <body>
         <div id="MainText">
