--- a/templates/sign-up.html
+++ b/templates/sign-up.html
@@ -9,7 +9,7 @@
  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </html>
-<body style="background-color: #2AA8A8"></body>
+<body style="background-color: #52B788"></body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
         <a class="navbar-brand"
@@ -77,8 +77,8 @@ input[type=text]:focus, input[type=password]:focus {
 
 /* Set a style for all buttons */
 button {
-  background-color: #04AA6D;
-  color: white;
+  background-color: white;
+  color: #52B788;
   padding: 14px 20px;
   margin: 8px 0;
   border: none;
@@ -94,7 +94,7 @@ button:hover {
 /* Extra styles for the cancel button */
 .cancelbtn {
   padding: 14px 20px;
-  background-color: #f44336;
+  background-color: white;
 }
 
 /* Float cancel and signup buttons and add an equal width */
