--- a/templates/chatroom.html
+++ b/templates/chatroom.html
@@ -15,7 +15,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
         <a class="navbar-brand"
-            href="https://5000-4770e44f-1df9-41fc-a010-c0c248f1e670.cs-us-east1-pkhd.cloudshell.dev">Home</a>
+            href= "/home">Home</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -24,12 +24,12 @@
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page"
-                        href="https://5000-4770e44f-1df9-41fc-a010-c0c248f1e670.cs-us-east1-pkhd.cloudshell.dev/sign-up">Sign
+                        href= "/sign-up">Sign
                         Up</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link"
-                        href="https://5000-4770e44f-1df9-41fc-a010-c0c248f1e670.cs-us-east1-pkhd.cloudshell.dev/log-in">Log
+                        href= "/log-in">Log
                         In</a>
                 </li>
                 <li class="nav-item dropdown">
@@ -39,13 +39,13 @@
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <li><a class="dropdown-item"
-                                href="https://5000-4770e44f-1df9-41fc-a010-c0c248f1e670.cs-us-east1-pkhd.cloudshell.dev/gethelp">Get
+                                href= "/gethelp">Get
                                 Help</a></li>
                         <li><a class="dropdown-item"
-                                href="https://5000-4770e44f-1df9-41fc-a010-c0c248f1e670.cs-us-east1-pkhd.cloudshell.dev/talk">Talk
+                                href= "/talk">Talk
                                 With A Professional</a></li>
                         <li><a class="dropdown-item"
-                                href="https://5000-4770e44f-1df9-41fc-a010-c0c248f1e670.cs-us-east1-pkhd.cloudshell.dev/chatroom">Chat
+                                href= "/chatroom">Chat
                                 Room</a></li>
                     </ul>
                 </li>
@@ -65,7 +65,7 @@
     <div class="card-body">
       <h5 class="card-title">Anxiety</h5>
       <p class="card-text">Chat With Other People Who Also Have Anxiety</p>
-       <a href="https://5000-4770e44f-1df9-41fc-a010-c0c248f1e670.cs-us-east1-pkhd.cloudshell.dev/chatroom-Anxiety" class="btn btn-primary">Chat</a>
+       <a href= "/chatroom-Anxiety" class="btn btn-primary">Chat</a>
     </div>
   </div>
   <div class="card">
@@ -73,7 +73,7 @@
     <div class="card-body">
       <h5 class="card-title">Bipolar Disorder</h5>
       <p class="card-text">Chat With Other People Who Also Have Bipolar Disorder</p>
-       <a href="https://5000-4770e44f-1df9-41fc-a010-c0c248f1e670.cs-us-east1-pkhd.cloudshell.dev/chatroom-Bipolar" class="btn btn-primary">Chat</a>
+       <a href= "/chatroom-Bipolar" class="btn btn-primary">Chat</a>
     </div>
   </div>
   <div class="card">
@@ -81,7 +81,7 @@
     <div class="card-body">
       <h5 class="card-title">Depression</h5>
       <p class="card-text">Chat With Other People Who Also Have Depression</p>
-       <a href="https://5000-4770e44f-1df9-41fc-a010-c0c248f1e670.cs-us-east1-pkhd.cloudshell.dev/chatroom-Depression" class="btn btn-primary">Chat</a>
+       <a href= "/chatroom-Depression" class="btn btn-primary">Chat</a>
     </div>
   </div>
 </div>
@@ -92,7 +92,7 @@
     <div class="card-body">
       <h5 class="card-title">ADHD</h5>
       <p class="card-text">Chat With People Who Also Have ADHD</p>
-       <a href="https://5000-4770e44f-1df9-41fc-a010-c0c248f1e670.cs-us-east1-pkhd.cloudshell.dev/chatroom-ADHD" class="btn btn-primary">Chat</a>
+       <a href= "/chatroom-ADHD" class="btn btn-primary">Chat</a>
     </div>
   </div>
   <div class="card">
@@ -100,7 +100,7 @@
     <div class="card-body">
       <h5 class="card-title">Stress</h5>
       <p class="card-text">Chat With People Who Also Have Stress</p>
-       <a href="https://5000-4770e44f-1df9-41fc-a010-c0c248f1e670.cs-us-east1-pkhd.cloudshell.dev/chatroom-Stress" class="btn btn-primary">Chat</a>
+       <a href= "/chatroom-Stress" class="btn btn-primary">Chat</a>
     </div>
   </div>
   <div class="card">
@@ -108,7 +108,7 @@
     <div class="card-body">
       <h5 class="card-title">Schizophrenia</h5>
       <p class="card-text">Chat With People Who Also Have Schizophrenia</p>
-       <a href="https://5000-4770e44f-1df9-41fc-a010-c0c248f1e670.cs-us-east1-pkhd.cloudshell.dev/chatroom-Schizophrenia" class="btn btn-primary">Chat</a>
+       <a href= "/chatroom-Schizophrenia" class="btn btn-primary">Chat</a>
     </div>
   </div>
 </div>
