--- a/templates/signed-in.html
+++ b/templates/signed-in.html
@@ -15,7 +15,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
         <a class="navbar-brand"
-            href="https://5000-4770e44f-1df9-41fc-a010-c0c248f1e670.cs-us-east1-pkhd.cloudshell.dev/signedin">Home</a>
+            href= "/signedin">Home</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -24,12 +24,12 @@
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page"
-                        href="https://5000-4770e44f-1df9-41fc-a010-c0c248f1e670.cs-us-east1-pkhd.cloudshell.dev/sign-up">Sign
+                        href= "/sign-up">Sign
                         Up</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link"
-                        href="https://5000-4770e44f-1df9-41fc-a010-c0c248f1e670.cs-us-east1-pkhd.cloudshell.dev">Log
+                        href= "/home">Log
                         Out</a>
                 </li>
                 <li class="nav-item dropdown">
@@ -39,13 +39,13 @@
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <li><a class="dropdown-item"
-                                href="https://5000-4770e44f-1df9-41fc-a010-c0c248f1e670.cs-us-east1-pkhd.cloudshell.dev/gethelp-signedin">Get
+                                href= "/gethelp-signedin">Get
                                 Help</a></li>
                         <li><a class="dropdown-item"
-                                href="https://5000-4770e44f-1df9-41fc-a010-c0c248f1e670.cs-us-east1-pkhd.cloudshell.dev/talk-signedin">Talk
+                                href= "/talk-signedin">Talk
                                 With A Professional</a></li>
                         <li><a class="dropdown-item"
-                                href="https://5000-4770e44f-1df9-41fc-a010-c0c248f1e670.cs-us-east1-pkhd.cloudshell.dev/chatroom-signedin">Chat
+                                href= "/chatroom-signedin">Chat
                                 Room</a></li>
                     </ul>
                 </li>
@@ -94,7 +94,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Information Page</h5>
                     <p class="card-text">Click here to learn more about us.</p>
-                    <a href="https://5000-4770e44f-1df9-41fc-a010-c0c248f1e670.cs-us-east1-pkhd.cloudshell.dev/info"
+                    <a href= "/info"
                         class="btn btn-primary">Info</a>
                 </div>
             </div>
