--- a/templates/info.html
+++ b/templates/info.html
@@ -88,7 +88,17 @@
                 are plenty of others who still have more to learn. There are available 
                 resources to inform oneself on mental health issues as well as resources in 
                 school for students. However, these resources may not be able to help as 
-                much as a professional would be able to.
+                much as listening to a professional or someone else's firsthand experience
+                would be able to.
+            </p>
+            <h2>Our Solution</h2>
+            <p id="Text">
+                We noticed this unfilled niche and decided to make a website to fill it. Our
+                website has many features that are not present in other mental health websites,
+                such as a chat room that allows students to speak with other students having the
+                same issues. In addition, we will soon have a way for students to contact a
+                professional, making it easier to contact someone who is knowledgeable about thier
+                specific problem.
             </p>
              <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
