--- a/templates/sign-up.html
+++ b/templates/sign-up.html
@@ -196,8 +196,8 @@ hr {
       <p>By creating an account you agree to our <a href="#" style="color:dodgerblue">Terms & Privacy</a>.</p>
 
       <div class="clearfix">
-        <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Cancel</button>
-        <button type="submit" class="signupbtn">Sign Up</button>
+        <button id="cancelbutton2" type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Cancel</button>
+        <button id="loginbutton" type="submit" class="signupbtn">Sign Up</button>
       </div>
     </div>
   </form>
