--- a/templates/info.html
+++ b/templates/info.html
@@ -14,8 +14,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-        <a class="navbar-brand"
-            href= "/home">Home</a>
+        <a class="navbar-brand" href="/home">Home</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -23,29 +22,24 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page"
-                        href= "/sign-up">Sign
+                    <a class="nav-link active" aria-current="page" href="/sign-up">Sign
                         Up</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link"
-                        href= "/log-in">Log
+                    <a class="nav-link" href="/log-in">Log
                         In</a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button"
-                        data-bs-toggle="dropdown" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+                        aria-expanded="false">
                         How To Get help
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item"
-                                href= "/gethelp">Get
+                        <li><a class="dropdown-item" href="/gethelp">Get
                                 Help</a></li>
-                        <li><a class="dropdown-item"
-                                href= "/talk">Talk
+                        <li><a class="dropdown-item" href="/talk">Talk
                                 With A Professional</a></li>
-                        <li><a class="dropdown-item"
-                                href= "/chatroom">Chat
+                        <li><a class="dropdown-item" href="/chatroom">Chat
                                 Room</a></li>
                     </ul>
                 </li>
@@ -72,22 +66,22 @@
             <link href="https://fonts.googleapis.com/css2?family=Cabin&display=swap" rel="stylesheet">
             <h2>The Problem</h2>
             <p id="Text">
-                Many people today tend to ignore the present mental health issues among 
-                students in New York City. In 2019, when the COVID-19 pandemic started, 
-                depression among teens from the ages of 15-19 spiked by an overwhelming 
-                35.9%. Over the past year with online school and Zoom classes, one can 
-                only imagine how much this percentage has increased. Depression in teens 
-                has also been proven to be a crucial factor in a student's academic 
-                performance and concentration. Additionally, in New York there are six 
-                deaths per every 100,000 people in the same age group of 15-19 caused by 
-                self harm. Even though this is not as many teens 
-                dying as there are in the US as a whole, every life matters. A few causes 
-                of the recent increase in these numbers are lack of knowledge on teen mental 
-                health and difficulty to access professional help. Around 45% of all people 
-                in the US consider themselves to know about mental health, this means there 
-                are plenty of others who still have more to learn. There are available 
-                resources to inform oneself on mental health issues as well as resources in 
-                school for students. However, these resources may not be able to help as 
+                Many people today tend to ignore the present mental health issues among
+                students in New York City. In 2019, when the COVID-19 pandemic started,
+                depression among teens from the ages of 15-19 spiked by an overwhelming
+                35.9%. Over the past year with online school and Zoom classes, one can
+                only imagine how much this percentage has increased. Depression in teens
+                has also been proven to be a crucial factor in a student's academic
+                performance and concentration. Additionally, in New York there are six
+                deaths per every 100,000 people in the same age group of 15-19 caused by
+                self harm. Even though this is not as many teens
+                dying as there are in the US as a whole, every life matters. A few causes
+                of the recent increase in these numbers are lack of knowledge on teen mental
+                health and difficulty to access professional help. Around 45% of all people
+                in the US consider themselves to know about mental health, this means there
+                are plenty of others who still have more to learn. There are available
+                resources to inform oneself on mental health issues as well as resources in
+                school for students. However, these resources may not be able to help as
                 much as listening to a professional or someone else's firsthand experience
                 would be able to.
             </p>
@@ -100,6 +94,40 @@
                 professional, making it easier to contact someone who is knowledgeable about thier
                 specific problem.
             </p>
-             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-            crossorigin="anonymous"></script>
+            <h2>Who Are We?</h2>
+            <div class="card-group" id="Cards">
+                <div class="card">
+                    <img src="https://i0.wp.com/images-prod.healthline.com/hlcmsresource/images/hl-newsletter-new/img/adhd.png?w=1155"
+                        class="card-img-top" alt="EmilyS" id="FounderPicture">
+                    <div class="card-body">
+                        <p id="FounderText">Chat With People Who Also Have ADHD</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="https://www.cedars-sinai.org/content/dam/cedars-sinai/blog/2019/07/common-physical-symptoms-of-hidden-stress.jpg"
+                        class="card-img-top" alt="MatthewV" id="FounderPicture">
+                    <div class="card-body">
+                        <p id="FounderText">Chat With People Who Also Have Stress</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="https://i0.wp.com/images-prod.healthline.com/hlcmsresource/images/hl-newsletter-new/img/adhd.png?w=1155"
+                        class="card-img-top" alt="KevinG" id="FounderPicture">
+                    <div class="card-body">
+                        <p id="FounderText">Chat With People Who Also Have ADHD</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="https://970-64a597a0-9624-4f91-9e13-066b8017a46f.cs-us-east1-pkhd.cloudshell.dev/mini-browser/home/archishmant/mentalhealthwebsite/FlaskProject2021/static/images/5E49C1A9-8C0B-4499-ADFC-9A4BA881D969.jpeg"
+                        class="card-img-top" alt="ArchishmanN" id="FounderPicture">
+                    <div class="card-body">
+                        <p id="FounderText">Hi, I'm Archishman, one of the coders who made this website.
+                            I wanted to make this because I thought a chatroom for teens with 
+                            mental health issues is an unfilled niche. Contact me at archishmant@gmail.com.
+                        </p>
+                    </div>
+                </div>
+            </div>
+                <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+                    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+                    crossorigin="anonymous"></script>
