--- a/static/css/style.css
+++ b/static/css/style.css
@@ -335,3 +335,22 @@ div {
     background-color: red;
     color: white;
   }
+  .column {
+    float: left;
+    width: 50%;
+  }
+
+/* Clear floats after the columns */
+  .row:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+  #FounderPicture{
+    max-width: 100%;
+    max-height: 300px
+  }
+  #FounderText{
+    text-align: center;
+    font-size: medium;
+  }
